DM-15393: FactoryCQ - Refactor Herd code to reduce the use of deprecated Java methods - Update deprecated methods